# class-8-sam-kevin

factorial/: factorial.c  test_factorial.c
linear_algebra/: linear_algebra.h  matrix.c  test_matrix_matrix_mul.c
linear_algebra_cxx/: CMakeLists.txt  linear_algebra.hxx  matrix.cxx  matrix_matrix_mul.cxx  matrix_vector_mul.cxx  test_matrix_matrix_mul.cxx  test_matrix_vector_mul.cxx  test_vector_add.cxx  test_vector_dot.cxx  vector.cxx  vector_add.cxx  vector_dot.cxx
